--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -19,28 +19,15 @@
     </view>
   </view>
   <view class="notices">
-    <view class="notices-head">社区<text>公告</text></view>
+    <view class="notices-head">
+      社区
+      <text>公告</text>
+    </view>
     <view class="notices-body">
-      <navigator hover-class="none" url="/pages/notify/index" class="notice">
-        <view class="notice-title">药品喷洒通知</view>
-        <view class="notice-brief"
-          >社区定于8月3日中午喷洒灭蚊药，提醒大家看管好小孩及宠物，提醒大家看管好小孩及宠物，提醒大家看管好小孩及宠物，不要到草坪中玩耍，以免造成不必要的危害。</view
-        >
-        <view class="notice-date">2022-08-03 16:00</view>
-      </navigator>
-      <navigator hover-class="none" url="/pages/notify/index" class="notice">
-        <view class="notice-title">药品喷洒通知</view>
-        <view class="notice-brief"
-          >社区定于8月3日中午喷洒灭蚊药，提醒大家看管好小孩及宠物，提醒大家看管好小孩及宠物，提醒大家看管好小孩及宠物，不要到草坪中玩耍，以免造成不必要的危害。</view
-        >
-        <view class="notice-date">2022-08-03 16:00</view>
-      </navigator>
-      <navigator hover-class="none" url="/pages/notify/index" class="notice">
-        <view class="notice-title">药品喷洒通知</view>
-        <view class="notice-brief"
-          >社区定于8月3日中午喷洒灭蚊药，提醒大家看管好小孩及宠物，提醒大家看管好小孩及宠物，提醒大家看管好小孩及宠物，不要到草坪中玩耍，以免造成不必要的危害。</view
-        >
-        <view class="notice-date">2022-08-03 16:00</view>
+      <navigator wx:for="{{notifyList}}" wx:key="id" hover-class="none" url="/pages/notify/index" class="notice">
+        <view class="notice-title">{{item.title}}</view>
+        <view class="notice-brief">{{item.content}}</view>
+        <view class="notice-date">{{item.createdAt}}</view>
       </navigator>
     </view>
   </view>
