--- a/miniprogram/house_pkg/pages/list/index.wxml
+++ b/miniprogram/house_pkg/pages/list/index.wxml
@@ -4,7 +4,7 @@
       <view class="houses">
         <view class="houses-title">房屋信息</view>
         <view class="houses-list">
-          <van-swipe-cell wx:for="{{houseList}}" wx:key="id" async-close bind:close="swipeClose" right-width="{{ 70 }}">
+          <van-swipe-cell wx:for="{{houseList}}" wx:key="id" async-close mark:id="{{item.id}}" mark:index="{{index}}" bind:close="swipeClose" right-width="{{ 70 }}">
             <van-cell-group mark:id="{{item.id}}" bind:tap="goDetail" border="{{false}}">
               <van-cell size="large" title="{{item.point}}">
                 <text class="tag info" wx:if="{{item.status === 1}}">正在审核</text>
