--- a/miniprogram/repair_pkg/pages/detail/index.wxml
+++ b/miniprogram/repair_pkg/pages/detail/index.wxml
@@ -1,39 +1,35 @@
-<scroll-view scroll-y enhanced show-scrollbar="{{false}}">
-  <view class="repair-detail">
-    <view class="polyline">
-      <map style="width: 100%; height: 100%;" scale="16" latitude="{{latitude}}" longitude="{{longitude}}"></map>
+<authorization>
+  <scroll-view scroll-y enhanced show-scrollbar="{{false}}">
+    <view class="repair-detail">
+      <view class="polyline" wx:if="{{status === 2}}">
+        <map style="width: 100%; height: 100%;" scale="16" latitude="{{latitude}}" longitude="{{longitude}}"></map>
+      </view>
+      <van-cell-group border="{{false}}" title="房屋信息">
+        <van-cell title="{{houseInfo}}">
+          <text class="tag info" wx:if="{{status === 1}}">受理中</text>
+          <text class="tag success" wx:if="{{status === 2}}">上门中</text>
+          <text class="tag complete" wx:if="{{status === 3}}">已完成</text>
+          <text class="tag cancel" wx:if="{{status === 0}}">已取消</text>
+        </van-cell>
+      </van-cell-group>
+      <van-cell-group title="报修信息" border="{{false}}">
+        <van-cell title-width="200rpx" title="维修项目" value="{{repairItemName}}" />
+        <van-cell title-width="200rpx" title="手机号码" value="{{mobile}}" />
+        <van-cell title-width="200rpx" title="预约日期" value="{{appointment}}" />
+        <van-cell title="{{description}}" />
+      </van-cell-group>
+      <view class="attachment">
+        <view class="title">问题附件</view>
+        <scroll-view scroll-x>
+          <image wx:for="{{attachment}}" wx:key="id" src="{{item.url}}"></image>
+        </scroll-view>
+      </view>
     </view>
-
-    <van-cell-group border="{{false}}" title="房屋信息">
-      <van-cell title="北京西三旗花园1号楼 101">
-        <text class="tag info">受理中</text>
-      </van-cell>
-    </van-cell-group>
-
-    <van-cell-group title="报修信息" border="{{false}}">
-      <van-cell title-width="200rpx" title="维修项目" value="水暖" />
-      <van-cell title-width="200rpx" title="手机号码" value="18332566962" />
-      <van-cell title-width="200rpx" title="预约日期" value="2022/08/22" />
-      <van-cell
-        title="问题描述"
-        label="每天晚上7点到8点热水都很不稳定，时有时无。每天晚上7点到8点热水都很不稳定，时有时无。每天晚上7点到8点热水都很不稳定，时有时无。每天晚上7点到8点热水都很不稳定，时有时无。每天晚上7点到8点热水都很不稳定，时有时无。每天晚上7点到8点热水都很不稳定，时有时无。"
-      />
-    </van-cell-group>
-
-    <view class="attachment">
-      <view class="title">问题附件</view>
-      <scroll-view scroll-x>
-        <image src="https://enjoy-plus.oss-cn-beijing.aliyuncs.com/uploads/attachment.jpg"></image>
-        <image src="https://enjoy-plus.oss-cn-beijing.aliyuncs.com/uploads/attachment.jpg"></image>
-        <image src="https://enjoy-plus.oss-cn-beijing.aliyuncs.com/uploads/attachment.jpg"></image>
-        <image src="https://enjoy-plus.oss-cn-beijing.aliyuncs.com/uploads/attachment.jpg"></image>
-        <image src="https://enjoy-plus.oss-cn-beijing.aliyuncs.com/uploads/attachment.jpg"></image>
-      </scroll-view>
-    </view>
+  </scroll-view>
+  <view class="toolbar" wx:if="{{status === 1}}">
+    <view class="button-text active" bind:tap="editRepair">修改信息</view>
+    <view bind:tap="openDialogLayer" class="button-text">取消报修</view>
   </view>
-</scroll-view>
-
-<view class="toolbar">
-  <view class="button-text active">修改信息</view>
-  <view bind:tap="test" class="button-text">取消报修</view>
-</view>
+  <!-- repair_pkg/pages/detail/index.wxml -->
+  <van-dialog message="是否要取消本次报修？" showCancelButton show="{{dialogVisible}}" cancel-button-color="#848484" confirm-button-color="#5591af" bind:close="dialogClose" />
+</authorization>
