--- a/miniprogram/repair_pkg/pages/detail/index.wxml
+++ b/miniprogram/repair_pkg/pages/detail/index.wxml
@@ -2,7 +2,7 @@
   <scroll-view scroll-y enhanced show-scrollbar="{{false}}">
     <view class="repair-detail">
       <view class="polyline" wx:if="{{status === 2}}">
-        <map style="width: 100%; height: 100%;" scale="16" latitude="{{latitude}}" longitude="{{longitude}}"></map>
+        <map style="width: 100%; height: 100%;" scale="16" markers="{{markers}}" polyline="{{polyline}}" latitude="{{latitude}}" longitude="{{longitude}}"></map>
       </view>
       <van-cell-group border="{{false}}" title="房屋信息">
         <van-cell title="{{houseInfo}}">
